--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "A simple project to understand how blockchain works",
   "main": "index.js",
   "scripts": {
+    "dev": "tsc -w",
+    "start": "tsc && node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "auchiya",
